--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@neondatabase/serverless": "^0.10.4",
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-query": "^5.51.23",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.39.0",
     "hono": "^4.6.19",
     "jstack": "^1.0.6",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.475.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.2",
     "wrangler": "^3.72.0",
@@ -30,6 +34,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240815.0",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^22.10.6",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
