--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.39.0",
+    "firebase": "^11.3.0",
     "hono": "^4.6.19",
     "jstack": "^1.0.6",
     "leaflet": "^1.9.4",
