--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-leaflet": "^5.0.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "wrangler": "^3.72.0",
     "zod": "^3.24.1"
   },
@@ -40,12 +41,13 @@
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "dotenv": "^16.4.5",
+    "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.1",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.4",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5"
   }
 }
